# Linux-Metrics-Collector

./: .gitignore  README.md
CSS/: index.css
client/: index.html
client/Js/: index.js
client/collector/: Cargo.toml
client/collector/src/: collector_utils.rs  main.rs
client/css/: index.css
client/js/: index.js
client/metrics_collector/src/: collector_utils.rs  main.rs
client/public/js/: homepage.js
database/: create_tables.sql  sample_data.sql
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/api/: mod.rs  task.rs
server/src/collector/: collector.rs  collector_utils.rs  mod.rs
server/src/commands/: cli_commands.rs  mod.rs
server/src/controllers/: mod.rs  task.rs
server/src/metrics_collector_controllers/: collector.rs  collector_utils.rs  controllers.rs  data.db  database.rs  handlers.rs  mod.rs  structs.rs
