[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"

# used to generate random UUIDs
uuid = {version = "^0.8", features = ["v4"]}

# used to serialize/deserialize objects from JSON
serde = {version = "^1", features = ["derive"]}

# Logging crates
env_logger = "0.8"
log = "^0.4"

# Crates useful for handling enums
strum_macros = "^0.24"
strum = {version = "0.24", features = ["derive"]}

# Automatically implements toString method on enums
derive_more = "0.99"