[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Helps create HTTP server.
actix-web = "4"
# Serializes and deserializes JSON objects.
serde = {version = "^1", features = ["derive"]}
# Crates for logging.
env_logger = "0.8"
log = "^0.4"
# Crates for handling enums
strum_macros = "^0.24"
strum = {version = "0.24", features = ["derive"]}
derive_more = "0.99"
# Generates random uuids.
uuid = {version = "^0.8", features = ["v4"]}
# Used for metrics collection.
sysinfo = "0.23.5"
procfs = "0.12.0"
# Useful datatypes.
arrayvec = "0.7.2"
rust_decimal = "1.22.0"

rusqlite = { version = "0.27.0", features = ["bundled"] }