[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at:
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.5.0"
clokwerk = "0.3.5"
actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.79"
uuid = {version = "^0.8", features = ["v4"]}
rusqlite = { version = "0.27.0", features = ["bundled"] }
procfs = "0.12.0"
sysinfo = "0.23.5"
log = "0.4.17"